[project]
name = "BiasSphere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi>=0.121.2",
    "nicegui>=3.3.0",
    "poetry>=2.2.1",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "tool>=0.8.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.poetry]
packages = [{include = "src/"}]

[tool.poetry.scripts]
"app:dev" = "src.frontend.main:__main__"
"api:dev" = "src.api.app:__main__"

[tool.ruff]
line-length = 120
